@@ -1,3 +1,8 @@
+1998-05-16  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* esdlib.c (esd_send_auth): POSIX allows some systems not to
+	define NAME_MAX.
+
 Mon Apr 27 23:58:52 1998  Yo 'Ric Dude  <ricdude@piranha>
 
 	* esd.c, esd.h, mix.c: moved clipping into mix.c
